--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "homepage": "https://github.com/angularclass/angular2-webpack-starter",
   "license": "MIT",
   "scripts": {
-    "build:aot:prod": "npm run clean:dist && npm run clean:aot && npm run ngc -- --webpack config/webpack.prod.js && webpack --config config/webpack.prod.js  --progress --profile --bail",
+    "build:aot:prod": "npm run clean:dist && npm run clean:aot && npm run ngc -- --webpack ng2src/config/webpack.prod.js && webpack --config ng2src/config/webpack.prod.js  --progress --profile --bail",
     "build:aot": "npm run build:aot:prod",
-    "build:dev": "npm run clean:dist && webpack --config config/webpack.dev.js --progress --profile",
+    "build:dev": "npm run clean:dist && webpack --config ng2src/config/webpack.dev.js --progress --profile",
     "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
-    "build:prod": "npm run clean:dist && webpack --config config/webpack.prod.js  --progress --profile --bail",
+    "build:prod": "npm run clean:dist && webpack --config ng2src/config/webpack.prod.js  --progress --profile --bail",
     "build": "npm run build:dev",
     "ci:aot": "npm run lint && npm run test && npm run build:aot && npm run e2e",
     "ci:jit": "npm run lint && npm run test && npm run build:prod && npm run e2e",
@@ -28,14 +28,14 @@
     "clean:start": "npm start",
     "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist compiled",
     "docker": "docker",
-    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
+    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./ng2src/src/",
     "e2e:live": "npm run e2e -- --elementExplorer",
     "e2e": "npm-run-all -p -r server:prod:ci e2e:only",
     "e2e:only": "npm run protractor",
-    "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --env.githubDev",
-    "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --env.githubProd",
+    "github-deploy:dev": "webpack --config ng2src/config/webpack.github-deploy.js --progress --profile --env.githubDev",
+    "github-deploy:prod": "webpack --config ng2src/config/webpack.github-deploy.js --progress --profile --env.githubProd",
     "github-deploy": "npm run github-deploy:dev",
-    "lint": "npm run tslint \"src/**/*.ts\"",
+    "lint": "npm run tslint \"ng2src/src/**/*.ts\"",
     "ngc": "./node_modules/.bin/ngc-w -p tsconfig.webpack.json",
     "postversion": "git push && git push --tags",
     "prebuild:dev": "npm run clean:dist",
@@ -47,7 +47,7 @@
     "protractor": "protractor",
     "rimraf": "rimraf",
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
-    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
+    "server:dev": "webpack-dev-server --config ng2src/config/webpack.dev.js --progress --profile --watch --content-base ng2src/src/",
     "server:prod": "http-server dist -c-1 --cors",
     "server:prod:ci": "http-server dist -p 3000 -c-1 --cors",
     "server": "npm run server:dev",
@@ -71,9 +71,9 @@
   "dependencies": {
     "@angular/common": "~2.4.1",
     "@angular/compiler": "~2.4.1",
-    "@angular/core": "~2.4.1",
+    "@angular/core": "^2.4.1",
     "@angular/forms": "~2.4.1",
-    "@angular/http": "~2.4.1",
+    "@angular/http": "^2.4.1",
     "@angular/platform-browser": "~2.4.1",
     "@angular/platform-browser-dynamic": "~2.4.1",
     "@angular/platform-server": "~2.4.1",
@@ -131,6 +131,7 @@
     "script-ext-html-webpack-plugin": "^1.3.2",
     "source-map-loader": "^0.1.5",
     "string-replace-loader": "1.0.5",
+    "strip-ansi": "^3.0.1",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
     "ts-helpers": "1.1.2",
@@ -142,7 +143,7 @@
     "v8-lazy-parse-webpack-plugin": "^0.3.0",
     "webpack": "2.2.0-rc.3",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "2.2.0-rc.0",
+    "webpack-dev-server": "^2.2.0-rc.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "~2.0.0"
   },
