--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "noEmit": true,
     "noEmitHelpers": true,
     "strictNullChecks": false,
-    "baseUrl": "./src",
+    "baseUrl": "./ng2src/src",
     "paths": {
     },
     "lib": [
@@ -29,7 +29,7 @@
   },
   "exclude": [
     "node_modules",
-    "dist"
+    "www"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
